fixing hero line spacing

--- a/styles/components/Hero.module.scss
+++ b/styles/components/Hero.module.scss
@@ -69,7 +69,7 @@ width:65%;
                 margin-top: 1.2rem;
             }
             @media screen and (min-width: 1312px) {
-                height: 69px;
+                height: auto;
                 line-height: 1.2;
                 width: 100%;
                 margin-left: -5px;
